# mosaic

./:  TODO.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: download.rs  lib.rs  metadata.rs  scanner.rs
src/components/: List.jsx  Player.jsx
src/store/: store.jsx
src/tutorial/: location.jsx
src/utils/: chosePath.js
